force-app/main/default/objects/FAQ__kav.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Article Answer Content</description>
        <label>Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Article_Expiration_Date__c</fullName>
        <description>Date in which article will expire and content needs to be reviewed.</description>
        <label>Article Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Updated__c</fullName>
        <label>Date Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_until_expires__c</fullName>
        <formula>Article_Expiration_Date__c - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days until expires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Functional_Group__c</fullName>
        <description>Group which owns and maintains the article.</description>
        <inlineHelpText>Group which owns and maintains the article.</inlineHelpText>
        <label>Functional Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic Technologies</fullName>
                </value>
                <value>
                    <fullName>Academic Transfer Credit Solutions</fullName>
                </value>
                <value>
                    <fullName>Admission Services</fullName>
                </value>
                <value>
                    <fullName>ASU Bookstore</fullName>
                </value>
                <value>
                    <fullName>ASU Online</fullName>
                </value>
                <value>
                    <fullName>Barrett Honors College</fullName>
                </value>
                <value>
                    <fullName>Career Services</fullName>
                </value>
                <value>
                    <fullName>Changemaker Central</fullName>
                </value>
                <value>
                    <fullName>Clubs &amp; Organizations</fullName>
                </value>
                <value>
                    <fullName>College of Health Solutions</fullName>
                </value>
                <value>
                    <fullName>College of Integrative Sciences and Arts</fullName>
                </value>
                <value>
                    <fullName>College of Liberal Arts and Sciences</fullName>
                </value>
                <value>
                    <fullName>College of Nursing and Health Innovation</fullName>
                </value>
                <value>
                    <fullName>College of Public Service and Community Solutions</fullName>
                </value>
                <value>
                    <fullName>Counseling Services</fullName>
                </value>
                <value>
                    <fullName>Cronkite</fullName>
                </value>
                <value>
                    <fullName>Disability Resource Center</fullName>
                </value>
                <value>
                    <fullName>EdPlus Open Scale</fullName>
                </value>
                <value>
                    <fullName>Financial Aid</fullName>
                </value>
                <value>
                    <fullName>First Year Success</fullName>
                </value>
                <value>
                    <fullName>Fraternity &amp; Sorority Life</fullName>
                </value>
                <value>
                    <fullName>Fulton Schools of Engineering</fullName>
                </value>
                <value>
                    <fullName>Graduate College</fullName>
                </value>
                <value>
                    <fullName>Health Services</fullName>
                </value>
                <value>
                    <fullName>Herberger Institute</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>Int'l Students and Scholars Center</fullName>
                </value>
                <value>
                    <fullName>Internal Knowledge</fullName>
                </value>
                <value>
                    <fullName>Internal Knowledge (Finances)</fullName>
                </value>
                <value>
                    <fullName>Library Resources</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Articles containing lists of questions and answers.</description>
    <label>FAQ</label>
    <pluralLabel>FAQ</pluralLabel>
</CustomObject>