force-app/main/default/objects/FAQ__kav/fields/Visible_to_Students_Public__c.field-meta.xml
<CustomField>
    <fullName>Visible_to_Students_Public__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <defaultValue>true</defaultValue>
    <description>Check this box for article visible to MyASU (akb) and Non-Authenticated (pkb) users. Custom Flow uses this field to update Channels</description>
    <inlineHelpText>Check this box for article visible to MyASU and Non-Authenticated users</inlineHelpText>
    <label>Visible to Students/Public</label>
    <type>Checkbox</type>
</CustomField>