force-app/main/default/objects/FAQ__kav/recordTypes/FAQ.recordType-meta.xml
<RecordType>
    <fullName>FAQ</fullName>
    <active>true</active>
    <label>FAQ</label>
</RecordType>