force-app/main/default/objects/FAQ__kav/listViews/Academic_Technologies_Draft_Articles.listView-meta.xml
<ListView>
    <fullName>Academic_Technologies_Draft_Articles</fullName>
    <columns>Functional_Group__c</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Functional_Group__c</field>
        <operation>equals</operation>
        <value>Academic Technologies</value>
    </filters>
    <label>Academic Technologies Draft Articles</label>
    <sharedTo>
        <group>KB_Academic_Technologies_Create</group>
        <group>Knowledge_Managers</group>
        <group>UTO_Administration</group>
    </sharedTo>
</ListView>