force-app/main/default/objects/FAQ__kav/listViews/Academic_Transfer_Cred_Sol_Published.listView-meta.xml
<ListView>
    <fullName>Academic_Transfer_Cred_Sol_Published</fullName>
    <columns>Functional_Group__c</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>Functional_Group__c</field>
        <operation>equals</operation>
        <value>Academic Transfer Credit Solutions</value>
    </filters>
    <label>Academic Transfer Cred Sol Published</label>
    <sharedTo>
        <group>KB_Academic_Transfer_Cred_Sol_Create</group>
        <group>Knowledge_Managers</group>
        <group>UTO_Administration</group>
    </sharedTo>
</ListView>