force-app/main/default/objects/FAQ__kav/listViews/Admission_Services_Published_Articles.listView-meta.xml
<ListView>
    <fullName>Admission_Services_Published_Articles</fullName>
    <columns>Functional_Group__c</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>Functional_Group__c</field>
        <operation>equals</operation>
        <value>Admission Services</value>
    </filters>
    <label>Admission Services Published Articles</label>
    <sharedTo>
        <group>KB_Admission_Services_Create</group>
        <group>Knowledge_Managers</group>
        <group>UTO_Administration</group>
    </sharedTo>
</ListView>