force-app/main/default/objects/FAQ__kav/listViews/All_Articles_with_Channel.listView-meta.xml
<ListView>
    <fullName>All_Articles_with_Channel</fullName>
    <columns>Functional_Group__c</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Visible_to_Students_Public__c</columns>
    <columns>IS_CHANNEL_PKB</columns>
    <columns>IS_CHANNEL_APP</columns>
    <columns>IS_CHANNEL_CSP</columns>
    <columns>IS_CHANNEL_PRM</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>VERSION_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <label>All Articles with Channel</label>
    <sharedTo>
        <group>Knowledge_Managers</group>
        <group>Knowledge_Publish</group>
    </sharedTo>
</ListView>