force-app/main/default/objects/FAQ__kav/listViews/ALL_Draft_Articles.listView-meta.xml
<ListView>
    <fullName>ALL_Draft_Articles</fullName>
    <columns>Functional_Group__c</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ARCHIVED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ALL Draft Articles</label>
    <sharedTo>
        <group>Knowledge_Managers</group>
        <group>UTO_Administration</group>
    </sharedTo>
</ListView>