force-app/main/default/objects/FAQ__kav/listViews/ALLArticles.listView-meta.xml
<ListView>
    <fullName>ALLArticles</fullName>
    <columns>Functional_Group__c</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>ALL Articles</label>
    <sharedTo>
        <group>Knowledge_Managers</group>
        <group>UTO_Administration</group>
    </sharedTo>
</ListView>