force-app/main/default/objects/FAQ__kav/listViews/American_Indian_Stu_Sup_Ser_ALL_Articles.listView-meta.xml
<ListView>
    <fullName>American_Indian_Stu_Sup_Ser_ALL_Articles</fullName>
    <columns>Functional_Group__c</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Functional_Group__c</field>
        <operation>equals</operation>
        <value>American Indian Student Support Service</value>
    </filters>
    <label>American Indian Stu Sup Ser ALL Articles</label>
    <sharedTo>
        <group>KB_American_Indian_Stu_Sup_Ser_Create</group>
        <group>Knowledge_Managers</group>
        <group>UTO_Administration</group>
    </sharedTo>
</ListView>